--- a/docker-compose72.yml
+++ b/docker-compose72.yml
@@ -4,8 +4,9 @@ nginx:
     - "80:80"
     - "443:443"
   extra_hosts: 
-    - "local.yishou.com:172.17.0.5"
-  volumes:
+    - "local.com:172.17.0.5"
+  
+    volumes:
     - ./www/:/var/www/html/:rw
     - ./conf/nginx/conf.d:/etc/nginx/conf.d/:ro
     - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
